--- a/Pipfile
+++ b/Pipfile
@@ -2,12 +2,12 @@
 #name = "pypi"
 #url = "https://pypi.org/simple"
 #verify_ssl = true
-
 name = "tsinghua"
 url = "https://pypi.tuna.tsinghua.edu.cn/simple"
 verify_ssl = true
 
 [dev-packages]
+autopep8 = "*"
 
 [packages]
 openpyxl = "*"
